--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,64 @@
-p {
-  font-family: Lato;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
+
+@font-face {
+    font-family: 'Fredoka One';
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/fredokaone/v8/k3kUo8kEI-tA1RRcTZGmTlHGCac.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  }
+  .top_heading{
+    font-size: 50px;
+    padding-left: 20px;
+    padding-top: 20px;
+    font-family: 'Fredoka One';
+    color: white;
+  }
+  .top_sub_heading{
+      color: white;
+    font-weight:100;
+    padding-left: 20px;
+  }
+ 
+  .top_head_band{
+      width: 100%;
+      height: 100%;
+      background-color: #323433;
+  }
+  .sub_head_band{
+    text-align: right;
+    width:100%;
+    height:100%;
+    background-color: #9e6df7;
+  }
+  .img_site{
+    vertical-align: middle;
+    padding-bottom: 40px;
+    padding-top: 10px;
+    padding-right: 10px;
+    font-size: 20px;
+    font-weight: bold;
+    color: white;
+  }
+  #img_style{
+    vertical-align: middle;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    size: 30px;
+  }
+  .sub_head{
+    padding-top: 20px;
+    font-size: x-large;
+    padding-left: 15px;
+  }
+  .main_body
+  { font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    line-height: 25px;
+    padding-left: 30px;
+    font-size:medium;
+  }
