--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,28 @@
-<hello name="{{ name }}"></hello>
-<p>
-  Start editing to see some magic happen :)
-</p>
+<!DOCTYPE html>
+<head>
+    <link rel="stylesheet" href="app.component.css">
+    <title>Home</title>
+</head>
+<body>
+    <div class="top_head_band"> 
+        <span class="top_heading">nipsol</span> 
+        <br>
+    <span class="top_sub_heading">CONTACTLESS ORDERING</span>
+    </div>
+    <div class="sub_head_band">
+        <img id="img_style" src="https://trello-attachments.s3.amazonaws.com/6048607c61de5b708f69ce86/6048607c61de5b708f69ce91/x/20b01d0aea8268981a84c57b46c55355/nipsol_favicon.png" alt="nipsol"> 
+        <span class="img_site">   www.nipsol.com</span>
+    </div>
+    <div >
+        <h1 class="sub_head">Salient Features of Nipsol</h1>
+        <br>
+        <ol type="1" class="main_body">
+            <li>It offers Platform Independent application for all restaurant food odering needs.</li>
+            <li>A nipsol certified restaurant is marked as safe to dine by most customers accross India.</li>
+            <li>Nipsol Payment System can be Integrated at 0% charges.</li>
+            <li>With QR-Based Ordering and e-Invoice functionality, human intervention is reduced considerably making it a contacless alternative to conventional orderign mechanisms.</li>
+            <li>Currently Nipsol has marked its presence in over 50 restaurants/Cafes accross 50 cities within a span of 8 weeks since its launch.</li>
+        </ol>
+    </div>
+
+</body>
