3 files modified : app.component.html, app.component.css, app.component.ts

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,71 +14,95 @@
         <span class="top_sub_heading">CONTACTLESS ORDERING</span>
     </div>
     <div class="sub_head_band">
-        <img id="img_style"
-            src="https://trello-attachments.s3.amazonaws.com/6048607c61de5b708f69ce86/6048607c61de5b708f69ce91/x/20b01d0aea8268981a84c57b46c55355/nipsol_favicon.png"
-            alt="nipsol">
-        <span class="img_site"> www.nipsol.com</span>
+        <ul>
+            <div class="link-section">
+                <li> <a   (click)="isVisibleUser=false;"> <strong>Home</strong> </a> </li>
+                <li> <a  (click)="isVisibleUser=true;"><strong> +Add User </strong></a> </li>
+            </div>
+            <li class="img_style">
+                <img src="https://trello-attachments.s3.amazonaws.com/6048607c61de5b708f69ce86/6048607c61de5b708f69ce91/x/20b01d0aea8268981a84c57b46c55355/nipsol_favicon.png"
+                    alt="nipsol">
+            </li>
+            <li class="nipsol-site"> www.nipsol.com</li>
+        </ul>
     </div>
-    <div>
-        <h1 class="sub_head"> <strong>User Registration</strong></h1>
+    <div *ngIf="!isVisibleUser" class="home">
+        <h1 class="sub_head"><strong>Salient Features of Nipsol</strong></h1>
+        <br>
+        <ol type="1" class="main_body">
+            <li>It offers Platform Independent application for all restaurant food odering needs.</li>
+            <li>A nipsol certified restaurant is marked as safe to dine by most customers accross India.</li>
+            <li>Nipsol Payment System can be Integrated at 0% charges.</li>
+            <li>With QR-Based Ordering and e-Invoice functionality, human intervention is reduced considerably making it
+                a contacless alternative to conventional orderign mechanisms.</li>
+            <li>Currently Nipsol has marked its presence in over 50 restaurants/Cafes accross 50 cities within a span of
+                8 weeks since its launch.</li>
+        </ol>
     </div>
-    <div class="container mycontainer">
-        <form>
-            <div class="form-group row">
-                <label for="inputName" class="col-sm-2 col-form-label"> <strong>Name</strong></label>
-                <div class="col-sm-10">
-                    <input name="name" class="form-control" id="inputName">
-                </div>
-            </div>
-            <div class="form-group row">
-                <label for="inputEmail3" class="col-sm-2 col-form-label"><strong>Email</strong></label>
-                <div class="col-sm-10">
-                    <input type="email" class="form-control" id="inputEmail3">
-                </div>
-            </div>
-            <div class="form-group row">
-                <label for="inputPhone" class="col-sm-2 col-form-label"><strong>Phone</strong></label>
-                <div class="col-sm-10">
-                    <input type="tel" class="form-control" id="inputPhone">
-                </div>
-            </div>
-            <div class="form-group row">
-                <label for="inputAddress" class="col-sm-2 col-form-label"><strong>Address</strong></label>
-                <div class="col-sm-10">
-                    <input type="address" class="form-control" id="inputAddress">
-                </div>
-            </div>
-            <fieldset class="form-group">
-                <div class="row">
-                    <legend class="col-form-label col-sm-2 pt-0 "> <strong>Gender</strong> </legend>
-                    <div class="col-sm-10 d-flex">
-                        <div class="form-check d-flex">
-                            <input class="form-check-input " type="radio" name="gridRadios" id="gridRadios1"
-                                value="option1" checked>
-                            <label class="form-check-label" for="gridRadios1">
-                                <strong>Male</strong>
-                            </label>
-                        </div>
-                        <div class="form-check ml-3 ">
-                            <input class="form-check-input " type="radio" name="gridRadios" id="gridRadios2"
-                                value="option2">
-                            <label class="form-check-label" for="gridRadios2">
-                                <strong>Female</strong>
-                            </label>
-                        </div>
 
+    <div *ngIf="isVisibleUser" class="add-user">
+        <div>
+            <h1 class="sub_head"> <strong>User Registration</strong></h1>
+        </div>
+
+        <div class="container mycontainer">
+            <form>
+                <div class="form-group row">
+                    <label for="inputName" class="col-sm-2 col-form-label"> <strong>Name</strong></label>
+                    <div class="col-sm-10">
+                        <input name="name" class="form-control" id="inputName">
                     </div>
                 </div>
-            </fieldset>
-
-            <div class="form-group ">
-                <div class="col-sm-10">
-                    <button type="reset" class="btn btn-primary  px-5  back-black">Reset
-                    </button>
-                    <button type="submit" class="btn btn-primary  px-5 ml-3 back-violet">Submit
-                    </button>
+                <div class="form-group row">
+                    <label for="inputEmail3" class="col-sm-2 col-form-label"><strong>Email</strong></label>
+                    <div class="col-sm-10">
+                        <input type="email" class="form-control" id="inputEmail3">
+                    </div>
                 </div>
-            </div>
-        </form>
+                <div class="form-group row">
+                    <label for="inputPhone" class="col-sm-2 col-form-label"><strong>Phone</strong></label>
+                    <div class="col-sm-10">
+                        <input type="tel" class="form-control" id="inputPhone">
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label for="inputAddress" class="col-sm-2 col-form-label"><strong>Address</strong></label>
+                    <div class="col-sm-10">
+                        <input type="address" class="form-control" id="inputAddress">
+                    </div>
+                </div>
+                <fieldset class="form-group">
+                    <div class="row">
+                        <legend class="col-form-label col-sm-2 pt-0 "> <strong>Gender</strong> </legend>
+                        <div class="col-sm-10 d-flex">
+                            <div class="form-check d-flex">
+                                <input class="form-check-input " type="radio" name="gridRadios" id="gridRadios1"
+                                    value="option1" checked>
+                                <label class="form-check-label" for="gridRadios1">
+                                    <strong>Male</strong>
+                                </label>
+                            </div>
+                            <div class="form-check ml-3 ">
+                                <input class="form-check-input " type="radio" name="gridRadios" id="gridRadios2"
+                                    value="option2">
+                                <label class="form-check-label" for="gridRadios2">
+                                    <strong>Female</strong>
+                                </label>
+                            </div>
+
+                        </div>
+                    </div>
+                </fieldset>
+
+                <div class="form-group ">
+                    <div class="col-sm-10">
+                        <button type="reset" class="btn btn-primary  px-5  back-black">Reset
+                        </button>
+                        <button type="submit" class="btn btn-primary  px-5 ml-3 back-violet">Submit
+                        </button>
+                    </div>
+                </div>
+            </form>
+        </div>
     </div>
 </body>
