--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -30,10 +30,12 @@
       background-color: #323433;
   }
   .sub_head_band{
-    text-align: right;
-    width:100%;
-    height:100%;
-    background-color: #9e6df7;
+   vertical-align: middle;
+  height: 28px;
+  background-color: #9e6df7;
+  padding-right: 10px;
+  padding-bottom: 5px;
+  color: white;
   }
   .img_site{
     vertical-align: middle;
@@ -44,16 +46,16 @@
     font-weight: bold;
     color: white;
   }
-  #img_style{
-    vertical-align: middle;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    size: 30px;
+  .img_style{
+  
+    display: inline-flex;
+  padding-right: 12px;
+  text-align: right;
   }
   .sub_head{
     padding-top: 20px;
     font-size: x-large;
-    padding-left: 15px;
+    padding-left: 20px;
   }
   .details{
     padding-top: 20px ;
@@ -74,4 +76,52 @@
 .back-black{
   border-color: #323433;
   background-color: #323433;
+}
+.home
+  { font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    line-height: 25px;
+    padding-left: 30px;
+    font-size:medium;
+  }
+  ul{
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    flex:1;
+  }
+  ul .link-section{
+    display: inline-flex;
+  margin-left: 10px;
+  margin-right: 10px;
+  flex: 1;
+     }
+     img {
+  margin-top: 2px;
+  width: 20px;
+}
+     ul .link-section li
+{
+  padding: 0 12px;
+}
+  .nipsol-site
+  { font-size: medium;
+    font-weight: bold;
+    padding-right: 12px;
+    padding-left:12px;
+  }
+  .home-id .user-id{
+    text-decoration: none;
+
+  }
+  ul{
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center; 
+}
+a{ text-decoration: none;
+  cursor: pointer;
 }
