Hello and Text-Input Added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,10 +8,10 @@
 </head>
 
 <body>
-    <div class="top_head_band">
-        <span class="top_heading">nipsol</span>
+    <div class="top_head_band pb-2">
+        <span class="top_heading">Hello</span>
         <br>
-        <span class="top_sub_heading">CONTACTLESS ORDERING</span>
+        <input name="name" class="form-control ml-3 top-input">
     </div>
     <div class="sub_head_band">
         <ul>
