--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -50,7 +50,7 @@
                 <div class="form-group row">
                     <label for="inputName" class="col-sm-2 col-form-label"> <strong>Name</strong></label>
                     <div class="col-sm-10">
-                        <input name="name" (keyup)="updateName(inputName.value)"  [value]=inputNameUpdate class="form-control" #inputName>
+                        <input name="name"   [value]=inputNameUpdate class="form-control" #inputName>
                     </div>
                 </div>
                 <div class="form-group row">
