--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -18,16 +18,13 @@
     font-family: 'Fredoka One';
     color: white;
   }
-  .top-input{
-    
-    border-radius: 5px;
-    border-width: 2px;
-    border-color: black;
-    font-size: 15px;
-    font-weight: 700;
-    padding-left: 5px;
-    padding-bottom: 1px;
-    padding-top: 1px;
+  .top_sub_heading{
+      color: white;
+    font-weight:100;
+    padding-left: 20px;
+  }
+  .validation-msg{
+    color: red;
   }
  
   .top_head_band{
