--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -112,15 +112,15 @@
     </div>
   </div>
   <div *ngIf="visibleUser==3" class="all-users">
-    <div>
-    <div class="row pt-4 pl-3 myShadow">
+    <div *ngFor="let item of userData; let i=index;">
+    <div class="row pt-4 pl-3 ">
       <div class="col-sm-6">
-        <div class="card">
+        <div class="card myShadow" >
           <div class="card-body">
-            <h4>John </h4>
-            <h4>John@gmail.com </h4>
-            <h4>7067747798</h4>
-            <h4>Barkatullah</h4>
+            <h4>{{i+1}}. {{item.userName}} </h4>
+            <h4>{{item.userEmail}} </h4>
+            <h4>{{item.userPhone}}</h4>
+            <h4>{{item.userAddress}}</h4>
           </div>
         </div>
       </div>
