--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -112,7 +112,7 @@
     </div>
   </div>
   <div *ngIf="visibleUser==3" class="all-users">
-    <div *ngFor="let item of userData; let i=index;">
+    <div class="container container_flex" *ngFor="let item of userData; let i=index;">
     <div class="row pt-4 pl-3 ">
       <div class="col-sm-6">
         <div class="card myShadow" >
