--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -111,10 +111,10 @@
       </form>
     </div>
   </div>
-  <div *ngIf="visibleUser==3" class="all-users">
-    <div class="container container_flex" *ngFor="let item of userData; let i=index;">
-    <div class="row pt-4 pl-3 ">
-      <div class="col-sm-6">
+  <div *ngIf="visibleUser==3" >
+    <div class="container">
+    <div class="row mt-3 pr-3" >
+      <div class="col-sm-6 mb-3" *ngFor="let item of userData; let i=index;" >
         <div class="card myShadow" >
           <div class="card-body">
             <h4>{{i+1}}. {{item.userName}} </h4>
@@ -125,7 +125,7 @@
         </div>
       </div>
     </div>
-    </div>
+</div>
 
   </div>
 </body>
