--- a/src/app/add-user/add-user.component.html
+++ b/src/app/add-user/add-user.component.html
@@ -1,14 +1,14 @@
-<div *ngIf="visibleUser==2">
+<div >
     <div>
         <h1 class="sub_head"> <strong>User Registration</strong></h1>
     </div>
 
     <div class="container mycontainer">
-        <form [formGroup]="userDetails" (ngSubmit)="collectData()">
+        <form [formGroup]="userDetails" (ngSubmit)="onSubmit()">
             <div class="form-group row">
                 <label for="inputName" class="col-sm-2 col-form-label"> <strong>Name</strong></label>
                 <div class="col-sm-10">
-                    <input name="name" [value]=inputNameUpdate formControlName="userName" class="form-control"
+                    <input name="name" formControlName="userName" class="form-control"
                         #inputName>
                 </div>
             </div>
