--- a/src/app/all-user/all-user.component.html
+++ b/src/app/all-user/all-user.component.html
@@ -1,7 +1,6 @@
-<div *ngIf="visibleUser==3" >
     <div class="container">
     <div class="row mt-3 pr-3" >
-      <div class="col-sm-6 mb-3" *ngFor="let item of userData; let i=index;" >
+      <div class="col-sm-6 mb-3" *ngFor="let item of userDetails; let i=index;" >
         <div class="card myShadow" >
           <div class="card-body">
             <h4>{{i+1}}. {{item.userName}} </h4>
@@ -14,4 +13,3 @@
     </div>
 </div>
 
-  </div>
